Bug 1709233 - Fix a null pointer crash in HTMLDialogElement::StorePreviouslyFocusedElement r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D114256